--- a/public/css/services.css
+++ b/public/css/services.css
@@ -5,7 +5,7 @@
     flex-direction: row;
     align-items: center;
     position: relative;
-    background-image: linear-gradient(black, black), url("/The Covid-19 Scene/images/nurse5.jpg");
+    background-image: linear-gradient(black, black), url("/images/nurse5.jpg");
     background-blend-mode: saturation;
     background-size: cover;
     background-position: center;
