--- a/public/css/news.css
+++ b/public/css/news.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    background-image: linear-gradient(black, black), url("/The Covid-19 Scene/images/cov.jpg");
+    background-image: linear-gradient(black, black), url("/images/cov.jpg");
     background-blend-mode: saturation;
     background-size: cover;
     background-position: center;
