--- a/public/css/text.css
+++ b/public/css/text.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    background-image: linear-gradient(black, black), url("/The Covid-19 Scene/images/people2.jpg");
+    background-image: linear-gradient(black, black), url("/images/people2.jpg");
     background-blend-mode: saturation;
     background-size: cover;
     background-position: center;
