--- a/public/css/people.css
+++ b/public/css/people.css
@@ -1,3 +1,6 @@
+#main{
+    display: block;
+}
 #people{
     padding-top: 20vh;
     padding-bottom: 20vh;
@@ -30,13 +33,53 @@ form {
     justify-content: space-around;
     align-items: flex-start;
 }
-input[type=text] {
-    width: 100%;
-}
 input[type=submit] {
     width: 100%;
     margin: 5px;
     text-align: left;
+    font-size: 14;
+    font-family: 'Open Sans';
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    appearance: none;
+    outline: 0;
+    box-shadow: none;
+    border: 0 !important;
+    background-color: var(--grey_nav);
+    background-image: none;
+    color: white;
+    -webkit-transition: 0.3s all ease;
+    -o-transition: 0.3s all ease;
+    transition: 0.3s all ease;
+}
+input[type=submit]:hover {
+    color: var(--orange);
+    background-color: var(--grey_hover);;
+}
+input[type=text] {
+    width: 100%;
+    height: 50px;
+    margin: 5px;
+    font-size: 14;
+    font-family: 'Open Sans';
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    appearance: none;
+    outline: 0;
+    box-shadow: none;
+    border: 0 !important;
+    background-color: black;
+    background-image: none;
+    color: white;
+    -webkit-transition: 0.3s all ease;
+    -o-transition: 0.3s all ease;
+    transition: 0.3s all ease;
 }
 #result_query{
     z-index: 1;
@@ -58,6 +101,15 @@ th, td{
     text-transform: uppercase;
 }
 @media (max-width: 700px) {
+    form{
+        width: 80%;
+    }
+    input[type=text] {
+        width: 100%;
+    }
+    input[type=submit] {
+        width: 100%;
+    }
     .form_cont_people{
         width: 100%;
     }
