--- a/public/css/people.css
+++ b/public/css/people.css
@@ -4,7 +4,7 @@
 #people{
     padding-top: 20vh;
     padding-bottom: 20vh;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -31,9 +31,9 @@ form {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: flex-start;
+    align-items: center;
 }
-input[type=submit] {
+input {
     width: 100%;
     margin: 5px;
     text-align: left;
@@ -60,33 +60,16 @@ input[type=submit]:hover {
     background-color: var(--grey_hover);;
 }
 input[type=text] {
-    width: 100%;
     height: 50px;
-    margin: 5px;
-    font-size: 14;
-    font-family: 'Open Sans';
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    appearance: none;
-    outline: 0;
-    box-shadow: none;
-    border: 0 !important;
     background-color: black;
-    background-image: none;
-    color: white;
-    -webkit-transition: 0.3s all ease;
-    -o-transition: 0.3s all ease;
-    transition: 0.3s all ease;
 }
 #result_query{
     z-index: 1;
 }
 
 tr{
-    margin: 10px;
+    height: 40px;
+    
     background-color: black;
     font-size: 14;
     font-family: 'Open Sans';
@@ -94,30 +77,46 @@ tr{
     font-weight: normal;
 }
 th, td{
-    min-width: 70px;
+    width: 300px;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .first{
     color: var(--orange);
     text-transform: uppercase;
 }
-@media (max-width: 700px) {
-    form{
-        width: 80%;
-    }
-    input[type=text] {
-        width: 100%;
-    }
-    input[type=submit] {
-        width: 100%;
-    }
+
+#tabella{
+    overflow: scroll;
+    margin: 0 5vw;
+}
+#tabella::-webkit-scrollbar {
+    display: none;
+  }
+@media (max-width: 900px) {
     .form_cont_people{
         width: 100%;
     }
+    form{
+        width: 100%;
+    }
+    input[type=text], input[type=submit]{
+        width: 70%;
+    }
     #result_query{
         width: 90vw;
-        overflow: scroll;
     }
 }
 .showing{
     display:block;
+}
+.errore_ins{
+    display: block;
+    font-size: 15;
+    color: red;
+    z-index: 1;
+    font-weight: bold;
+    width: 100%;
 }
