--- a/public/css/home.css
+++ b/public/css/home.css
@@ -526,3 +526,6 @@ footer h4 {
     margin-right: 20vw;
     font-weight: bold;
 }
+.error {
+    background-color: rgba(255, 0, 0, 0.39) !important;
+}
