--- a/public/css/news.css
+++ b/public/css/news.css
@@ -2,9 +2,9 @@
     display: block;
 }
 #form_news{
-    padding-top: 20vh;
+    
     padding-bottom: 20vh;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -94,6 +94,56 @@ input[type=submit]:hover {
     color: var(--orange);
     background-color: black;
 }
+#form_news h3{
+    z-index: 1;
+    position: absolute;
+    top:50vh;
+    padding: 10vh 10vw;
+    margin-bottom: 50vh;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.521);
+    border-radius: 8px;
+}
+#result_news {
+    height: 100vh;
+    margin-top: 50vh;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    vertical-align: text-top;
+}
+#result_news .news_container {
+    width: 30%;
+    margin: 10px 1.5vw;
+    height: 35%;
+    color:white;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    filter: grayscale(100%);
+    transition: filter 0.3s;
+}
+#result_news .news_container:hover {
+    filter: grayscale(0%);
+}
+@media (max-width: 700px) {
+    #result_news {
+        height: 300vh;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    #result_news .news_container {
+        width: 80%;
+    }
+    #form_news h3{
+        margin-left: 20vw;
+        margin-right: 20vw;
+    }
+    
+}
 
 @media (max-width: 1199px) {
     footer #infos #logo {
@@ -122,46 +172,4 @@ input[type=submit]:hover {
         border-radius: 0.3em;
         max-width: 80%;
     }
-}
-#result_news {
-    height: 100vh;
-    margin-top: 40vh;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    vertical-align: text-top;
-}
-#result_news .news_container {
-    width: 30%;
-    margin: 10px;
-    height: 35%;
-    color:white;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    filter: grayscale(100%);
-    transition: filter 0.3s;
-}
-#result_news .news_container:hover {
-    filter: grayscale(0%);
-}
-@media (max-width: 700px) {
-    #result_news {
-        height: 300vh;
-        flex-wrap: nowrap;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-    #result_news .news_container {
-        width: 80%;
-    }
-    
-}
-h3{
-    z-index: 1;
-    padding: 0 10vw;
-    text-align: center;
-    
 }
